# FARM

./: README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: authentications.py  permissions.py  roles.py  students.py  users.py
backend/app/core/: config.py  dependencies.py  jwt.py  security.py
backend/app/crud/: __init__.py  base.py  crud_role.py  crud_student.py  crud_user.py
backend/app/db/: base.py  mongodb_utils.py
backend/app/models/: dbmodel.py  role.py  rwmode.py  student.py  user.py
backend/app/schemas/: __init__.py  student.py
backend/app/utils/: permissions.py
