[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Sudip Bhujel <devsudipbhujel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
pydantic = {extras = ["email"], version = "^1.8.2"}
pymongo = "^3.12.0"
motor = "^2.5.1"
databases = "^0.5.0"
python-dotenv = "^0.19.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
